# FlyingRocks

./: CMakeLists.txt  LICENSE.md  README.md  TODO
cmake/: .FindGtest.cmake.swp
src/: CMakeLists.txt  asteroid.h  asteroid_manager.cpp  asteroid_manager.h  asteroids.cpp  basic_asteroid_shape.h  bullet.h  bullet_manager.cpp  bullet_manager.h  color.h  default_ship_shape.h  geometry.cpp  geometry.h  life_bar.cpp  life_bar.h  main.cpp  position_updater.cpp  position_updater.h  random_generator.cpp  random_generator.h  score.cpp  score.h  score_observer.cpp  score_observer.h  sdl_backend.cpp  sdl_backend.h  sdl_error.cpp  sdl_error.h  sdl_renderer.cpp  sdl_renderer.h  sdl_texture.cpp  sdl_texture.h  ship.cpp  ship.h  text.cpp  text.h  timer.cpp  timer.h  vector.cpp  vector.h  (+2 more)
tests/: CMakeLists.txt  test_main.cpp
